// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Atoms/Button simple button 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Button
    </span>
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Button
    </span>
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Button
    </span>
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Button
    </span>
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Button
    </span>
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeLarge MuiButton-sizeLarge"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Button
    </span>
  </button>,
]
`;

exports[`Storyshots Components/Atoms/List list 1`] = `
<ul
  className="MuiList-root Component-root Component-root MuiList-padding"
>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-0"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-0"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-1"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-1"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-2"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-2"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-3"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-3"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-4"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-4"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-5"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-5"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-6"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-6"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-7"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-7"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-8"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-8"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
  <li
    className="MuiListItem-container"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          Nome
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
    >
      <div
        className="MuiBox-root MuiBox-root Component-root Component-root"
      >
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <input
                className="PrivateSwitchBase-input"
                data-indeterminate={false}
                id="checkbox-9"
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <label
            className="MuiTypography-root Component-root Component-root MuiTypography-body1"
            htmlFor="checkbox-9"
          >
            Administrator
          </label>
        </div>
        <button
          aria-describedby={null}
          aria-label="delete"
          className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Components/atoms/AppBar appBar 1`] = `
<div
  className="MuiBox-root MuiBox-root Component-root Component-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <div
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary Component-root Component-root MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root"
    >
      <div
        className="MuiContainer-root Component-root Component-root MuiContainer-maxWidthMd"
      >
        <img
          alt="Logo"
          className="img-root img-root"
          src=""
        />
        <div
          className="MuiBox-root MuiBox-root Component-root Component-root"
        >
          <button
            aria-describedby={null}
            className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            title="Search"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-describedby={null}
            className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            title="Menu"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/atoms/Badge badge 1`] = `
<span
  className="MuiBadge-root Component-root Component-root"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
    />
  </svg>
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
  >
    1
  </span>
</span>
`;

exports[`Storyshots Components/atoms/Box box 1`] = `
<div
  className="MuiBox-root MuiBox-root Component-root Component-root"
/>
`;

exports[`Storyshots Components/atoms/Checkbox checkbox 1`] = `
<div
  className="MuiBox-root MuiBox-root Component-root Component-root"
>
  <div
    className="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <span
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root MuiIconButton-colorSecondary"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <input
          className="PrivateSwitchBase-input"
          data-indeterminate={false}
          id="unchecked-checkbox"
          onChange={[Function]}
          type="checkbox"
        />
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </span>
    </span>
    <label
      className="MuiTypography-root Component-root Component-root MuiTypography-body1"
      htmlFor="unchecked-checkbox"
    >
      Unchecked
    </label>
  </div>
  <div
    className="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <span
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <input
          checked={true}
          className="PrivateSwitchBase-input"
          data-indeterminate={false}
          id="checked-checkbox"
          onChange={[Function]}
          type="checkbox"
        />
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </span>
    </span>
    <label
      className="MuiTypography-root Component-root Component-root MuiTypography-body1"
      htmlFor="checked-checkbox"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/atoms/CircularProgress circular progress 1`] = `
<div
  className="MuiCircularProgress-root WithStyles(ForwardRef(CircularProgress))-root WithStyles(ForwardRef(CircularProgress))-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/atoms/Container container 1`] = `
<div
  className="MuiContainer-root Component-root Component-root MuiContainer-maxWidthSm"
>
  <div
    className="MuiBox-root MuiBox-root Component-root Component-root"
  />
</div>
`;

exports[`Storyshots Components/atoms/Grid grid 1`] = `
<div
  className="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-container MuiGrid-spacing-xs-2"
>
  <div
    className="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Button
      </span>
    </button>
  </div>
  <div
    className="MuiGrid-root WithStyles(ForwardRef(Grid))-root WithStyles(ForwardRef(Grid))-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/atoms/IconButton icon button 1`] = `
<button
  aria-label="Search"
  className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Components/atoms/Image image 1`] = `
<img
  alt="Logo"
  className="img-root img-root"
  src=""
/>
`;

exports[`Storyshots Components/atoms/LinearProgress linear progress 1`] = `
<div
  className="MuiLinearProgress-root MuiLinearProgress-colorSecondary WithStyles(ForwardRef(LinearProgress))-root WithStyles(ForwardRef(LinearProgress))-root MuiLinearProgress-indeterminate"
  role="progressbar"
>
  <div
    className="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Indeterminate"
    style={Object {}}
  />
  <div
    className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorSecondary"
    style={Object {}}
  />
</div>
`;

exports[`Storyshots Components/atoms/Link link 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover Component-root Component-root MuiTypography-colorPrimary"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Link
</a>
`;

exports[`Storyshots Components/atoms/Paper paper 1`] = `
<div
  className="MuiPaper-root Component-root Component-root MuiPaper-elevation1 MuiPaper-rounded"
/>
`;

exports[`Storyshots Components/atoms/Popover popover 1`] = `
Array [
  <button
    aria-controls="menu"
    aria-describedby={null}
    aria-haspopup="true"
    aria-label="Menu"
    className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
    data-testid="menu-button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="Menu"
    type="button"
  >
    <span
      className="MuiIconButton-label"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <div
    className="MuiPopover-root WithStyles(ForwardRef(Popover))-root"
    id="menu"
    onKeyDown={[Function]}
    role="presentation"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "visibility": "hidden",
        "zIndex": 1300,
      }
    }
  >
    <div
      data-test="sentinelStart"
      tabIndex={0}
    />
    <div
      className="MuiPaper-root MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
      style={
        Object {
          "opacity": 0,
          "transform": "scale(0.75, 0.5625)",
          "visibility": "hidden",
        }
      }
      tabIndex="-1"
    >
      <ul
        className="MuiList-root ForwardRef(MenuList)-root MuiList-padding"
        onKeyDown={[Function]}
        role="menu"
        tabIndex={-1}
      >
        <li
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <div
            className="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Update data
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
        <li
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Update Credentials
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
        <li
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Account settings
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
        <li
          aria-disabled={false}
          className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root Component-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemIcon-root WithStyles(ForwardRef(ListItemIcon))-root"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </div>
          <div
            className="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              Logout
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </ul>
    </div>
    <div
      data-test="sentinelEnd"
      tabIndex={0}
    />
  </div>,
]
`;

exports[`Storyshots Components/atoms/Portal portal 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <p
      className="MuiTypography-root Component-root Component-root MuiTypography-body1"
    >
      It looks like I will render here.
    </p>
    <p
      className="MuiTypography-root Component-root Component-root MuiTypography-body1"
    >
      But I actually render here!
    </p>
  </div>,
  <div
    className="MuiBox-root MuiBox-root Component-root Component-root"
  />,
]
`;

exports[`Storyshots Components/atoms/Skeleton skeleton 1`] = `
Array [
  <span
    className="makeStyles-root makeStyles-circle makeStyles-pulse Component-root Component-root"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  />,
  <span
    className="makeStyles-root makeStyles-text makeStyles-pulse Component-root Component-root"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  />,
  <span
    className="makeStyles-root makeStyles-rect makeStyles-pulse Component-root Component-root"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  />,
]
`;

exports[`Storyshots Components/atoms/Snackbar SnackBar 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
     Open SnackBar 
  </span>
</button>
`;

exports[`Storyshots Components/atoms/Stepper Stepper 1`] = `
Array [
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-body1"
  >
     Horizontal 
  </p>,
  <div
    className="MuiPaper-root MuiStepper-root MuiStepper-horizontal WithStyles(ForwardRef(Stepper))-root MuiStepper-alternativeLabel MuiPaper-elevation0"
  >
    <div
      className="MuiStep-root MuiStep-horizontal WithStyles(ForwardRef(Step))-root MuiStep-alternativeLabel"
    >
      <span
        className="MuiStepLabel-root MuiStepLabel-horizontal WithStyles(ForwardRef(StepLabel))-root MuiStepLabel-alternativeLabel"
      >
        <span
          className="MuiStepLabel-iconContainer MuiStepLabel-alternativeLabel"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              className="MuiStepIcon-text"
              textAnchor="middle"
              x="12"
              y="16"
            >
              1
            </text>
          </svg>
        </span>
        <span
          className="MuiStepLabel-labelContainer"
        >
          <span
            className="MuiTypography-root MuiStepLabel-label MuiStepLabel-alternativeLabel MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            First Step
          </span>
        </span>
      </span>
    </div>
    <div
      className="MuiStep-root MuiStep-horizontal WithStyles(ForwardRef(Step))-root MuiStep-alternativeLabel"
    >
      <div
        className="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel MuiStepConnector-disabled"
      >
        <span
          className="MuiStepConnector-line MuiStepConnector-lineHorizontal"
        />
      </div>
      <span
        className="MuiStepLabel-root MuiStepLabel-horizontal WithStyles(ForwardRef(StepLabel))-root MuiStepLabel-disabled MuiStepLabel-alternativeLabel"
      >
        <span
          className="MuiStepLabel-iconContainer MuiStepLabel-alternativeLabel"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              className="MuiStepIcon-text"
              textAnchor="middle"
              x="12"
              y="16"
            >
              2
            </text>
          </svg>
        </span>
        <span
          className="MuiStepLabel-labelContainer"
        >
          <span
            className="MuiTypography-root MuiStepLabel-label MuiStepLabel-alternativeLabel MuiTypography-body2 MuiTypography-displayBlock"
          >
            Second Step
          </span>
        </span>
      </span>
    </div>
    <div
      className="MuiStep-root MuiStep-horizontal WithStyles(ForwardRef(Step))-root MuiStep-alternativeLabel"
    >
      <div
        className="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel MuiStepConnector-disabled"
      >
        <span
          className="MuiStepConnector-line MuiStepConnector-lineHorizontal"
        />
      </div>
      <span
        className="MuiStepLabel-root MuiStepLabel-horizontal WithStyles(ForwardRef(StepLabel))-root MuiStepLabel-disabled MuiStepLabel-alternativeLabel"
      >
        <span
          className="MuiStepLabel-iconContainer MuiStepLabel-alternativeLabel"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              className="MuiStepIcon-text"
              textAnchor="middle"
              x="12"
              y="16"
            >
              3
            </text>
          </svg>
        </span>
        <span
          className="MuiStepLabel-labelContainer"
        >
          <span
            className="MuiTypography-root MuiStepLabel-label MuiStepLabel-alternativeLabel MuiTypography-body2 MuiTypography-displayBlock"
          >
            Third Step
          </span>
        </span>
      </span>
    </div>
  </div>,
  <div
    className="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Back
      </span>
    </button>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained Component-root Component-root MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Next
      </span>
    </button>
  </div>,
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-body1"
  >
     Horizontal 
  </p>,
  <div
    className="MuiPaper-root MuiStepper-root MuiStepper-vertical WithStyles(ForwardRef(Stepper))-root MuiPaper-elevation0"
  >
    <div
      className="MuiStep-root MuiStep-vertical WithStyles(ForwardRef(Step))-root"
    >
      <span
        className="MuiStepLabel-root MuiStepLabel-vertical WithStyles(ForwardRef(StepLabel))-root"
      >
        <span
          className="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              className="MuiStepIcon-text"
              textAnchor="middle"
              x="12"
              y="16"
            >
              1
            </text>
          </svg>
        </span>
        <span
          className="MuiStepLabel-labelContainer"
        >
          <span
            className="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
          >
            First Step
          </span>
        </span>
      </span>
    </div>
    <div
      className="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-disabled"
    >
      <span
        className="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      className="MuiStep-root MuiStep-vertical WithStyles(ForwardRef(Step))-root"
    >
      <span
        className="MuiStepLabel-root MuiStepLabel-vertical WithStyles(ForwardRef(StepLabel))-root MuiStepLabel-disabled"
      >
        <span
          className="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              className="MuiStepIcon-text"
              textAnchor="middle"
              x="12"
              y="16"
            >
              2
            </text>
          </svg>
        </span>
        <span
          className="MuiStepLabel-labelContainer"
        >
          <span
            className="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Second Step
          </span>
        </span>
      </span>
    </div>
    <div
      className="MuiStepConnector-root MuiStepConnector-vertical MuiStepConnector-disabled"
    >
      <span
        className="MuiStepConnector-line MuiStepConnector-lineVertical"
      />
    </div>
    <div
      className="MuiStep-root MuiStep-vertical WithStyles(ForwardRef(Step))-root"
    >
      <span
        className="MuiStepLabel-root MuiStepLabel-vertical WithStyles(ForwardRef(StepLabel))-root MuiStepLabel-disabled"
      >
        <span
          className="MuiStepLabel-iconContainer"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiStepIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
            <text
              className="MuiStepIcon-text"
              textAnchor="middle"
              x="12"
              y="16"
            >
              3
            </text>
          </svg>
        </span>
        <span
          className="MuiStepLabel-labelContainer"
        >
          <span
            className="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            Third Step
          </span>
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/atoms/Text Field text field 1`] = `
Array [
  <div
    className="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
      htmlFor="input"
      id="input-label"
    >
      Label name
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoComplete="off"
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        id="input"
        maxLength={100}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled"
        >
          <span>
            Label name
          </span>
        </legend>
      </fieldset>
    </div>
  </div>,
  <div
    className="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink={true}
      htmlFor="select-input"
      id="select-input-label"
    >
      Label name
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="select-input-label select-input"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
        id="select-input"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 1
      </div>
      <input
        aria-hidden={true}
        autoComplete="off"
        autoFocus={false}
        className="MuiSelect-nativeInput"
        maxLength={100}
        onAnimationStart={[Function]}
        onChange={[Function]}
        required={false}
        tabIndex={-1}
        value={1}
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
        >
          <span>
            Label name
          </span>
        </legend>
      </fieldset>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/atoms/Tooltip paper 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  title="Search"
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/atoms/Typography typography 1`] = `
<div
  className="MuiBox-root MuiBox-root Component-root Component-root"
>
  <h1
    className="MuiTypography-root Component-root Component-root MuiTypography-h1"
  >
    h1
  </h1>
  <h2
    className="MuiTypography-root Component-root Component-root MuiTypography-h2"
  >
    h2
  </h2>
  <h3
    className="MuiTypography-root Component-root Component-root MuiTypography-h3"
  >
    h3
  </h3>
  <h4
    className="MuiTypography-root Component-root Component-root MuiTypography-h4"
  >
    h4
  </h4>
  <h5
    className="MuiTypography-root Component-root Component-root MuiTypography-h5"
  >
    h5
  </h5>
  <h6
    className="MuiTypography-root Component-root Component-root MuiTypography-h6"
  >
    h6
  </h6>
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-subtitle1"
  >
    subtitle1
  </p>
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-subtitle2"
  >
    subtitle2
  </p>
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-body1"
  >
    body1
  </p>
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-body2"
  >
    body2
  </p>
  <span
    className="MuiTypography-root Component-root Component-root MuiTypography-button"
  >
    button
  </span>
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-caption"
  >
    caption
  </p>
  <p
    className="MuiTypography-root Component-root Component-root MuiTypography-overline"
  >
    overline
  </p>
</div>
`;
